# stache-tools

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: release.yml
docs/: SETUP.md  TROUBLESHOOTING.md
scripts/: build_exe.py  cli_entry.py  mcp_entry.py
src/stache_tools/: __init__.py
src/stache_tools/cli/: __init__.py  __main__.py  batch_ingest.py  documents.py  health.py  ingest.py  jobs.py  main.py  models.py  namespaces.py  search.py
src/stache_tools/client/: __init__.py  api.py  config.py  exceptions.py  factory.py  http.py  lambda_transport.py  retry.py  transport.py
src/stache_tools/loaders/: __init__.py  base.py  documents.py  ocr.py  pdf.py  registry.py  text.py
src/stache_tools/mcp/: __init__.py  __main__.py  formatters.py  server.py  tools.py
src/stache_tools/plugins/: __init__.py  base.py  enrichment.py  ocr.py
tests/: __init__.py  conftest.py  test_client.py  test_loaders.py
tests/cli/: test_batch_ingest.py  test_ingest.py  test_jobs.py  test_namespaces.py
tests/client/: __init__.py  test_lambda_transport.py
tests/loaders/: __init__.py  test_documents.py
